--- a/css/help-content2.css
+++ b/css/help-content2.css
@@ -1,5 +1,5 @@
 section .help.content-two > div {
-    padding: 30px 0;
+    padding: 50px 0;
 }
 
 section .help.content-two {
@@ -55,7 +55,7 @@ body {
 #nav-link {
     position: absolute;
     display: none;
-    top: 135px;
+    top: 165px;
     right: 0;
     height: 126px;
     width: 276px;
@@ -86,7 +86,7 @@ body {
 
 @media all and (min-width: 600px ) {
     section .help.content-two > div {
-        padding: 50px 0;
+        padding: 70px 0;
     }
     section .help.content-two h2 {
         font-size: 32px;
@@ -118,7 +118,7 @@ body {
 
 @media all and (min-width: 980px ) {
     section .help.content-two > div {
-        padding: 70px 0;
+        padding: 100px 0;
     }
     #nav-link {
         display: block;
